# lib/api-spec/openapi.yaml
@@ -346,6 +346,10 @@ paths:
           in: query
           schema:
             type: integer
+        - name: campaignId
+          in: query
+          schema:
+            type: integer
       responses:
         "200":
           description: List of drafts
